# bakalarka

./: CMakeLists.txt  bh.c  galaxy.c  main.c
